# hol-agents

./: .gitignore  AGENTS.md  LICENSE  README.md  README_MCP_LOOP.md  REPO_PROMPT.md  SKILL.md  hol-agent-helper.sh  hol_cursor.py  hol_file_parser.py  hol_mcp_server.py  hol_pipeline.py  hol_planner.py  hol_proof_agent.py  hol_session.py  hol_sketch.py  install-skill.sh  install.sh  pyproject.toml  requirements.txt  uninstall.sh
experimental/: codex_claude_loop.py
legacy/: AGENTS.md  README.md  install-skill.sh  test-reaping.sh
legacy/skills/hol-script-legacy/: operator.md
legacy/skills/hol-script-legacy/scripts/: hol-agent-helper.sh
prompts/: hol4_planner.md  hol4_proof_agent.template.md  hol4_sketch_impl.md
prompts/hol4/: proof_agent.template.md  scratch_template.md  sketch_impl.md  theorem_search_agent.md
repo_prompt/: MAIN.md  cursor.md  mcp_server.md  pipeline.md  planner.md  proof_agent.md  session.md  sketch.md
skills/hol/: SKILL.md  holmake.md  itp.md  operator.md
skills/hol-script-legacy/: holmake.md
skills/hol/scripts/: etq.sml  hol-agent-helper.sh
skills/hol4/: plan.md  prompts  prove.md  sketch.md
sml_helpers/: cheat_finder.sml  etq.sml
tests/: test-reaping.sh  test_hol_components.py  test_hol_cursor.py  test_hol_file_parser.py  test_hol_proof_agent.py  test_hol_session.py  test_install_scripts.py  test_interrupt.sh  test_mcp_server.py  test_mcp_transport.py
