[project]
name = "hol-agents"
version = "0.1.0"
description = "HOL4 theorem proving agent with MCP tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
